--- a/package.json
+++ b/package.json
@@ -433,10 +433,11 @@
     "gulp-sass": "^5.1.0",
     "gulp-terser": "^2.1.0",
     "gulp-webp": "^4.0.1",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0" 
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+        "sass": "sass --watch src/scss:dist/css"
   },
   "author": "",
   "license": "ISC"
